accepting ride and plot working

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- public/index.html -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwmXwwjgVeR05p7CfvN9aCcdgbhC21Z9s"></script> -->
   </body>
 </html>
